--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to the Ly’s homepage!
-description: This is my personal website.
+description: I like reading books, learning programming language, and playing guitar.
