Set theme jekyll-theme-dinky

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-dinky
 title: Welcome to the Ly’s homepage!
 description: I like reading books, learning programming language, and playing guitar.
